# fp-gym

./: .gitignore  README.md  build.sbt  justfile
.github/workflows/: haskell-ci.yml  python-ci.yml  scala-ci.yml  test.yml
haskell/: README.md  fp-gym-haskell.cabal  justfile  stack.yaml
haskell/app/: Main.hs
haskell/bench/: Main.hs
haskell/bench/FpGym/: TwoSumBench.hs
haskell/src/FpGym/: TwoSum.hs
haskell/src/FpGym/Common/: Solution.hs
haskell/test/FpGym/: TwoSumProperties.hs  TwoSumSpec.hs
project/: plugins.sbt
python/: justfile  pyproject.toml
python/src/: __init__.py  main.py
python/src/fp_gym/: __init__.py  solver.py
python/src/fp_gym/arrays/: find_missing_repeating.py
python/tests/: __init__.py  test_property_twosum.py  test_twosum.py
src/main/scala/: AnagramCheckSolution.scala  AsyncCombineSolution.scala  CfgParserSolution.scala  CharFrequencySolution.scala  CustomFlattenerSolution.scala  DuplicateRemovalSolution.scala  FactorialSolution.scala  FibonacciSolution.scala  ListParserSolution.scala  Main.scala  ParAsyncCombineRecoverSolution.scala  ParAsyncCombineSolution.scala  PrimeCheckerSolution.scala  QuickSortSolution.scala  SafeDivisionSolution.scala  Solution.scala  SolutionComparer.scala  Timer.scala  TwoSumMutSolution.scala  TwoSumSolution.scala
src/main/scala/common/: Solution.scala  SolutionComparer.scala  Timer.scala
src/main/scala/lists/: FindMissingRepeating.scala  HOF.scala  ListSolution.scala  RunLenghtEncoding.scala
src/main/scala/prior/: TurnstileSolution.scala
src/test/scala/: CharFrequencySuite.scala  CustomFlattenerSuite.scala  DuplicateRemovalSuite.scala  FactorialSuite.scala  FindMissingRepeatTest.scala  RLESuite.scala  SortingSuite.scala  TwoSumSuite.scala
